--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@ function validateForm() {
         check = false;
     }
     
-    
+    //Bütün girdileri kontrol et
     if(check == false){
         return false;
     }
