--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ function validateForm() {
         check = false;
     }else{
         if(max30.length >30){
-            document.getElementById('lblMax30').innerHTML = 'Lütfen Max 30 Karakter Giriniz!';
+            document.getElementById('lblMax30').innerHTML = 'Max 30 Karakter Giriniz!';
             document.getElementById('lblMax30').style.color = "Red";
             check = false;
         }else
